# gsplat-pytorch

./: .gitignore  README.md  pyproject.toml
example/: simple_trainer.py
gsplat/: project_gaussians.py  rasterize.py
